@@ -1,6 +1,4 @@
 
-#define COPT               "--std=c++0x -Wall -O2"
-
 #define ECHO_REQUEST       1
 
 #define LIBS               "bobcat"
@@ -8,6 +6,7 @@
 
 
 string                  // contain options for
+    g_copt,             // compiler options
     g_cwd,              // current WD
     libs,               // extra libs, e.g., "-lrss -licce"
     libpath,            // extra lib-paths, eg, "-L../rss"
@@ -17,6 +16,21 @@ int
     g_nClasses;         // number of classes/subdirectories
 list
     g_classes;          // list of classes/directories
+
+string setOpt(string install_im, string envvar)
+{
+    list optvar;
+    string ret;
+
+    optvar = getenv(envvar);    
+
+    if (optvar[0] == "1")
+        ret = optvar[1];
+    else 
+        ret = install_im;
+
+    return ret;
+}
 
 void setClasses()
 {
@@ -122,13 +136,8 @@ void c_compile(int prefix, string srcDir, list cfiles)
     string compiler;
     string file;
 
-    compiler = COMPILER;
-
-    #ifdef PROFILE
-        compiler += " " PROFILE " ";
-    #endif
-
-    compiler +=  " -c -o " + srcDir + "/o/" + (string)prefix;
+    compiler = COMPILER + " -Wall --std=c++0x -c -o " + 
+                                srcDir + "/o/" + (string)prefix;
 
     md(srcDir + "/o");
 
@@ -137,7 +146,7 @@ void c_compile(int prefix, string srcDir, list cfiles)
         file = element(idx, cfiles);
         
         run(compiler + change_ext(file, "o") + " " + 
-                COPT + " " + srcDir + "/" + file);
+                g_copt + " " + srcDir + "/" + file);
     }
 }
 
@@ -199,6 +208,8 @@ void library(int lib_only)
     md("tmp/bin tmp/o");
 
     special();
+
+    g_copt = setOpt(CXXFLAGS, "CXXFLAGS");
 
     cpp_make
     (
