@@ -3,13 +3,9 @@ void program(string strip)
 {
     string lopt;
 
-    #ifdef PROFILE
-        lopt = PROFILE;
-    #else
-        lopt = strip;
-    #endif
-
     library(0);
+
+    lopt = strip + setOpt(LDFLAGS, "LDFLAGS");
 
     exec(COMPILER, "-o", g_binary,
             "-loxref", libs, "-L.", libpath , lopt);
