@@ -2,10 +2,7 @@
 
 #include <algorithm>
 
-//#include <bobcat/arg>
 #include <bobcat/arg>
-
-#include <bobcat/fnwrap>
 #include <bobcat/process>
 
 using namespace std;
