@@ -11,7 +11,13 @@ void Store::insertDefined(size_t idx, ostream &out, XrefVector const &xref)
     {
         ref.defined(out);
         out << "  Used By:\n";
-        for_each(begin, end, FnWrap::unary(usedBy, out, xref));
+        for_each(
+            begin, end,
+            [&](size_t idx)
+            {
+                usedBy(idx, out, xref);
+            }
+        );
     }
     out << '\n';
 }
