@@ -16,11 +16,23 @@ std::ostream &Store::insertInto(std::ostream &out) const
         insert(out, entity, doSelect);
     else
     {
-        sort(d_defIdx.begin(), d_defIdx.end(), 
-                                            FnWrap::binary(name, d_xrefData));
+        sort(
+            d_defIdx.begin(), d_defIdx.end(), 
+            [&](size_t left, size_t right)
+            {
+                return 
+                    strcasecmp(d_xrefData[left].name(), 
+                               d_xrefData[right].name()) < 0;
+            }
+        );
     
-        for_each(d_defIdx.begin(), d_defIdx.end(),
-            FnWrap::unary(insertDefined, out, d_xrefData));
+        for_each(
+            d_defIdx.begin(), d_defIdx.end(),
+            [&](size_t idx)
+            {
+                insertDefined(idx, out, d_xrefData);
+            }
+        );
     }
 
     return out;
